# airpods-ble-protocol

./: CMakeLists.txt  README.MD  apple_ble_protocol.c  apple_ble_protocol.h
